work in progress

--- a/code/pre-trained_wordvectors_to_keras.ipynb
+++ b/code/pre-trained_wordvectors_to_keras.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -48,33 +48,7 @@
       "1  Admission Date:  [**2137-8-31**]              ...  \n",
       "2  Admission Date:  [**2174-1-6**]              D...  \n",
       "3  Admission Date:  [**2102-6-9**]              D...  \n",
-      "4  Admission Date:  [**2164-7-2**]       Discharg...  \n",
-      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
-      "|    id|4019|2724|25000|4280|41401|53081|51881|42731|5849|5990|                text|\n",
-      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
-      "|117760|   0|   0|    0|   0|    0|    1|    1|    0|   0|   0|\"Admission Date: ...|\n",
-      "|129030|   1|   1|    0|   0|    0|    1|    0|    0|   0|   0|Admission Date:  ...|\n",
-      "|172040|   0|   0|    0|   0|    1|    0|    0|    0|   1|   0|Admission Date:  ...|\n",
-      "|156170|   0|   0|    1|   1|    0|    0|    0|    1|   1|   0|Admission Date:  ...|\n",
-      "|199180|   0|   0|    1|   1|    1|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
-      "|167440|   0|   0|    1|   0|    1|    0|    1|    0|   0|   0|\"Admission Date: ...|\n",
-      "|194580|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
-      "|178710|   0|   0|    0|   0|    0|    0|    0|    0|   1|   0|\"Admission Date: ...|\n",
-      "|162840|   0|   1|    0|   1|    0|    0|    0|    1|   0|   0|Admission Date:  ...|\n",
-      "|189980|   1|   0|    1|   1|    0|    0|    0|    0|   0|   0|Admission Date: [...|\n",
-      "|142370|   0|   0|    0|   1|    1|    0|    0|    0|   0|   0|\"Admission Date: ...|\n",
-      "|185380|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Unit No:  [**Nume...|\n",
-      "|169510|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
-      "|153640|   0|   0|    0|   0|    1|    0|    1|    0|   0|   0|Admission Date:  ...|\n",
-      "|196650|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Admission Date: [...|\n",
-      "|180780|   0|   0|    0|   0|    0|    0|    1|    0|   1|   0|\"Admission Date: ...|\n",
-      "|149040|   1|   0|    0|   0|    1|    0|    1|    0|   0|   0|\"Admission Date: ...|\n",
-      "|117300|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
-      "|196190|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
-      "|101430|   1|   1|    1|   0|    1|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
-      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
-      "only showing top 20 rows\n",
-      "\n"
+      "4  Admission Date:  [**2164-7-2**]       Discharg...  \n"
      ]
     }
    ],
@@ -87,15 +61,13 @@
     "\n",
     "ICD9CODES = pickle.load(open(\"./data/ICD9CODES.p\", \"r\"))\n",
     "\n",
-    "df_hadm_top10 = pd.read_csv(\"/Volumes/EXTERNAL1/MIMICIII/DATA_HADM_TOP10.csv\", escapechar='\\\\')\n",
-    "df_hadm_top10_2 = spark.read.csv(\"/Volumes/EXTERNAL1/MIMICIII/DATA_HADM_TOP10.csv\", header=True, inferSchema=True)\n",
-    "print df_hadm_top10.head()\n",
-    "df_hadm_top10_2.show()\n"
+    "df_hadm_top10 = pd.read_csv(\"./data/DATA_HADM_TOP10.csv\", escapechar='\\\\')\n",
+    "print df_hadm_top10.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -128,8 +100,6 @@
     "#labels_index = {}  # dictionary mapping label name to numeric id\n",
     "#labels = []  # list of label ids\n",
     "\n",
-    "labels=['id',`4019`, `2724`,`25000`,`4280`,`41401`,`53081`,`51881`,`42731`,`5849`,`5990`]\n",
-    "\n",
     "toke = Tokenizer()\n",
     "toke.fit_on_texts(texts)\n",
     "sequence = toke.texts_to_sequences(texts)\n",
@@ -140,7 +110,7 @@
     "\n",
     "print('Found %s unique tokens.' % len(word_index))\n",
     "\n",
-    "#data = pad_sequences(sequence, maxlen=40000)\n",
+    "data = pad_sequences(sequence)\n",
     "\n",
     "#labels = to_categorical(np.asarray(labels))\n",
     "#print('Shape of data tensor:', data.shape)\n",
@@ -149,9 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -170,15 +140,18 @@
     "\n",
     "idx_train, idx_val, idx_test = separate(1234, df_hadm_top10.shape[0])\n",
     "\n",
-    "labels=['id',`4019`, `2724`,`25000`,`4280`,`41401`,`53081`,`51881`,`42731`,`5849`,`5990`]\n",
+    "#labels=['id',`4019`, `2724`,`25000`,`4280`,`41401`,`53081`,`51881`,`42731`,`5849`,`5990`]\n",
+    "labels = list(df_hadm_top10.columns)\n",
+    "labels.remove('text')\n",
+    "labels.remove('id')\n",
     "\n",
     "train_label=df_hadm_top10.loc[idx_train][labels]\n",
     "val_label=df_hadm_top10.loc[idx_val][labels]\n",
     "test_label=df_hadm_top10.loc[idx_test][labels]\n",
     "\n",
-    "train_sequence=texts[idx_train]\n",
-    "val_sequence=texts[idx_val]\n",
-    "test_sequence=texts[idx_test]\n"
+    "train_sequence=data[idx_train]\n",
+    "val_sequence=data[idx_val]\n",
+    "test_sequence=data[idx_test]\n"
    ]
   },
   {
@@ -215,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -232,6 +205,7 @@
    ],
    "source": [
     "import numpy as np\n",
+    "import os\n",
     "\n",
     "embeddings_index = {}\n",
     "f = open(os.path.join(\"./data/\", 'model_word2vec.txt'))\n",
@@ -247,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -272,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -285,7 +259,7 @@
     "        #embedding_vector = embeddings_index.get(word)\n",
     "    #if embedding_vector is not None:\n",
     "        # words not found in embedding index will be all-zeros.\n",
-    "        embedding_matrix[i] = embedding_vector"
+    "        embedding_matrix[i] = embeddings_index.get(word)"
    ]
   },
   {
@@ -297,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -315,6 +289,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           id  4019  2724  25000  4280  41401  53081  51881  42731  5849  5990\n",
+      "22653  112108     1     0      0     1      0      0      0      0     0     0\n",
+      "14729  136683     1     0      0     0      0      0      0      0     0     0\n",
+      "17620  187756     0     0      1     1      0      1      0      1     0     0\n",
+      "25598  108901     0     1      0     1      0      0      0      1     0     1\n",
+      "48887  138443     0     0      0     0      0      0      0      0     0     0\n",
+      "           id  4019  2724  25000  4280  41401  53081  51881  42731  5849  5990\n",
+      "2763   103972     0     0      0     0      0      0      0      0     0     0\n",
+      "36538  167599     0     0      0     0      0      0      0      0     0     0\n",
+      "824    144673     0     0      0     0      0      0      1      0     0     0\n",
+      "10865  189107     0     0      0     0      1      0      0      0     0     0\n",
+      "50721  116601     1     0      0     0      0      0      0      0     1     0\n",
+      "           id  4019  2724  25000  4280  41401  53081  51881  42731  5849  5990\n",
+      "28544  177454     0     0      0     0      0      0      0      0     1     0\n",
+      "48630  185362     1     0      0     0      0      1      0      0     1     0\n",
+      "31338  121116     0     0      0     0      0      0      1      0     0     0\n",
+      "38717  119768     0     0      0     0      0      0      0      0     0     0\n",
+      "361    101661     0     0      0     0      1      0      0      0     0     0\n",
+      "[[ 961  276  558  382   17   47   97 4700   13   21  419  216   49    6\n",
+      "   646    4   40  276  399   36]\n",
+      " [   9   89   79    1  147    2   40   51  102 4187    4 2205   93   58\n",
+      "   472   36  520   58  136  509]\n",
+      " [  24 2732    9    1   20 1010   48  217 2692    7   60   57    9  638\n",
+      "   484    4 1038   28 1282  597]\n",
+      " [ 282   50   33  248    6  352    2  104  372    4  635   40   78  257\n",
+      "    17  463  271  134  399   36]\n",
+      " [  72   24  110  806  583  594  147  189 1511   17   39    6  382 1033\n",
+      "  2777 1304 2046  987 1305 1464]]\n",
+      "[[1865  987 1305 1166 1464  583 1109  189 1798   17   47    6 1109  581\n",
+      "  1033 1304 1865  987 1305 1464]\n",
+      " [ 446    3   53  165   99    4   53  276   50  474  961    1  276    2\n",
+      "  6354    1   57  446   36 4110]\n",
+      " [ 714  271  134  558  183  529  435  183  529   35   69  558  979 7401\n",
+      "   435 2777  511  491   35   69]\n",
+      " [  62    1   13   51  832  276    6   80   10   17   43   93   93   58\n",
+      "   472   36  520   58  136  509]\n",
+      " [ 491   35   69   80   97  228   10   45  276  685  511   80 1798   17\n",
+      "    47    3  511  382  399   36]]\n",
+      "[[  276    97   228 74171 11740    35    69   558   382   491    35    69\n",
+      "    558  2046   242    86   420  6845    35    69]\n",
+      " [   50   496    44  5120    49   646     9     1   612   241    97   228\n",
+      "     80   564     4   961    45  1972   276   382]\n",
+      " [  534   407     7  4286     3 10450   218    94   241    10  6604    18\n",
+      "    877    12   204    64   420   476     9   223]\n",
+      " [    1    37  2627   345   394    57   165  1250   664     9   346     3\n",
+      "    176  1612   517  2724     1    37  1368   393]\n",
+      " [   77   979   395     4     1   668   979 30615   583    10     7    60\n",
+      "     88   589   692   593    53   276   399    36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print train_label.head()\n",
+    "print val_label.head()\n",
+    "print test_label.head()\n",
+    "\n",
+    "train_label = n\n",
+    "print train_sequence[:5,:]\n",
+    "print val_sequence[:5,:]\n",
+    "print test_sequence[:5,:]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -324,22 +373,17 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Apache Toree - PySpark",
    "language": "python",
-   "name": "python2"
+   "name": "apache_toree_pyspark"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
    "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "python",
+   "version": "2.7.13\n"
   }
  },
  "nbformat": 4,
