final preprocess.ipynb and initial wordseq_*.py

--- a/code/feature_extraction_dl_word2vec.ipynb
+++ b/code/feature_extraction_dl_word2vec.ipynb
@@ -26,7 +26,11 @@
     "import numpy as np\n",
     "import pickle\n",
     "\n",
-    "ICD9CODES = pickle.load(open(\"./data/ICD9CODES.p\", \"r\"))"
+    "ICD9CODES = pickle.load(open(\"./data/ICD9CODES.p\", \"r\"))\n",
+    "ICD9CODES_TOP10 = pickle.load(open(\"./data/ICD9CODES_TOP10.p\", \"r\"))\n",
+    "ICD9CODES_TOP50 = pickle.load(open(\"./data/ICD9CODES_TOP50.p\", \"r\"))\n",
+    "ICD9CAT_TOP10 = pickle.load(open(\"./data/ICD9CAT_TOP10.p\", \"r\"))\n",
+    "ICD9CAT_TOP50 = pickle.load(open(\"./data/ICD9CAT_TOP50.p\", \"r\"))"
    ]
   },
   {
@@ -74,6 +78,9 @@
     "    toke.fit_on_texts(texts)\n",
     "    sequence = toke.texts_to_sequences(texts)\n",
     "\n",
+    "    ave_seq = [len(i) for i in sequence]\n",
+    "    print 1.0* sum(ave_seq) / len(ave_seq)\n",
+    "    \n",
     "    word_index = toke.word_index\n",
     "    reverse_word_index = dict(zip(word_index.values(), word_index.keys())) # dict e.g. {1:'the', 2:'a' ...}\n",
     "    #index_list = word_index.values()\n",
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -190,12 +197,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       id  4019  2724  25000  4280  41401  53081  51881  42731  5849  5990  \\\n",
-      "0  117760     0     0      0     0      0      1      1      0     0     0   \n",
-      "1  129030     1     1      0     0      0      1      0      0     0     0   \n",
-      "2  172040     0     0      0     0      1      0      0      0     1     0   \n",
-      "3  156170     0     0      1     1      0      0      0      1     1     0   \n",
-      "4  199180     0     0      1     1      1      0      0      0     0     0   \n",
+      "       id  4019  4280  42731  41401  5849  25000  2724  51881  5990  \\\n",
+      "0  117760     0     0      0      0     0      0     0      1     0   \n",
+      "1  129030     1     0      0      0     0      0     1      0     0   \n",
+      "2  172040     0     0      0      1     1      0     0      0     0   \n",
+      "3  156170     0     1      1      0     1      1     0      0     0   \n",
+      "4  199180     0     1      0      1     0      1     0      0     0   \n",
+      "\n",
+      "                         ...                          c511  c412  c707  c348  \\\n",
+      "0                        ...                             0     0     0     0   \n",
+      "1                        ...                             0     0     0     0   \n",
+      "2                        ...                             0     0     0     0   \n",
+      "3                        ...                             0     0     0     0   \n",
+      "4                        ...                             0     0     0     0   \n",
+      "\n",
+      "   c765  cE88  c571  c300  c733  \\\n",
+      "0     0     0     0     0     0   \n",
+      "1     0     0     0     0     0   \n",
+      "2     0     0     0     0     0   \n",
+      "3     0     0     0     0     0   \n",
+      "4     0     0     0     0     0   \n",
       "\n",
       "                                                text  \n",
       "0  \"Admission Date:  [**2118-12-14**]            ...  \n",
@@ -203,32 +224,24 @@
       "2  Admission Date:  [**2174-1-6**]              D...  \n",
       "3  Admission Date:  [**2102-6-9**]              D...  \n",
       "4  Admission Date:  [**2164-7-2**]       Discharg...  \n",
+      "\n",
+      "[5 rows x 102 columns]\n",
+      "1057.45596101\n",
       "Found 117458 unique tokens.\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./data/DATA_HADM_TOP10.csv\", escapechar='\\\\')\n",
+    "df = pd.read_csv(\"./data/DATA_HADM.csv\", escapechar='\\\\')\n",
     "print df.head()\n",
     "\n",
-    "data, word_index, reverse_word_index = create_WORD2VEC_DL_V0(df, max_sequence_len=600)"
+    "data, word_index, reverse_word_index = create_WORD2VEC_DL_V0(df.copy(), max_sequence_len=1000)\n",
+    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP10.p\", ICD9CODES_TOP10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "labels = [`4019`, `2724`,`25000`,`4280`,`41401`,`53081`,`51881`,`42731`,`5849`,`5990`]\n",
-    "batch_output_pickle(df, data, reverse_word_index, \"./data/DATA_WORDSEQV0_HADM_TOP10.p\", labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -238,6 +251,8 @@
      "output_type": "stream",
      "text": [
       "Found 33837 word vectors.\n",
+      "Found 29939 word vectors.\n",
+      "Found 29939 word vectors.\n",
       "Found 29939 word vectors.\n"
      ]
     }
@@ -246,7 +261,64 @@
     "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec.txt\", remove_stopwords=True)\n",
     "output_pickle(em, \"./data/EMBMATRIX_WORD2VEC.p\")\n",
     "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec_v2_100dim.txt\", remove_stopwords=True)\n",
-    "output_pickle(em, \"./data/EMBMATRIX_WORD2VEC_v2_100dim.p\")"
+    "output_pickle(em, \"./data/EMBMATRIX_WORD2VEC_v2_100dim.p\")\n",
+    "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec_v2_300dim.txt\", remove_stopwords=True)\n",
+    "output_pickle(em, \"./data/EMBMATRIX_WORD2VEC_v2_300dim.p\")\n",
+    "em = create_EmbeddingMatrix_V0(word_index, \"./data/model_word2vec_v2_600dim.txt\", remove_stopwords=True)\n",
+    "output_pickle(em, \"./data/EMBMATRIX_WORD2VEC_v2_600dim.p\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extra"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basic Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1057.45596101\n",
+      "962.0\n",
+      "7944\n",
+      "3\n",
+      "2016.0\n",
+      "2393.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"./data/DATA_HADM.csv\", escapechar='\\\\')\n",
+    "\n",
+    "texts = df['text'].apply(preprocessor_word2vec)\n",
+    "#texts = df['text']  # list of text samples\n",
+    "\n",
+    "toke = Tokenizer()\n",
+    "toke.fit_on_texts(texts)\n",
+    "sequence = toke.texts_to_sequences(texts)\n",
+    "\n",
+    "seq_len = [len(i) for i in sequence]\n",
+    "print np.mean(seq_len)\n",
+    "print np.median(seq_len)\n",
+    "print np.max(seq_len)\n",
+    "print np.min(seq_len)\n",
+    "print np.percentile(seq_len, 90)\n",
+    "print np.percentile(seq_len, 95)"
    ]
   },
   {
