--- a/code/ml_baseline.ipynb
+++ b/code/ml_baseline.ipynb
@@ -418,7 +418,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/DATA_TFIDFV0_HADM_TOP50\n",
+      "Train, Test: 39544 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.9168 & 0.5288 & 0.6602 & 0.9525 & 0.2048 & 0.5437 & 0.2164 & 0.2915 & 0.9226 & 0.0914 \\\\ \\hline\n",
+      "10 & 0.9874 & 0.9350 & 0.9602 & 0.9908 & 0.7563 & 0.4502 & 0.3010 & 0.3555 & 0.9168 & 0.0853 \\\\ \\hline\n",
+      "25 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.9991 & 0.4008 & 0.2954 & 0.3354 & 0.9091 & 0.0702 \\\\ \\hline\n",
+      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3968 & 0.2955 & 0.3343 & 0.9084 & 0.0699 \\\\ \\hline\n",
+      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3968 & 0.2955 & 0.3343 & 0.9084 & 0.0699 \\\\ \\hline\n",
+      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3968 & 0.2955 & 0.3343 & 0.9084 & 0.0699 \\\\ \\hline\n",
+      "./data/DATA_TFIDFV1_HADM_TOP50\n",
+      "Train, Test: 39544 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.8538 & 0.6050 & 0.7031 & 0.9548 & 0.1902 & 0.5288 & 0.2812 & 0.3571 & 0.9233 & 0.0892 \\\\ \\hline\n",
+      "10 & 0.9779 & 0.9599 & 0.9687 & 0.9918 & 0.7148 & 0.4213 & 0.3355 & 0.3712 & 0.9127 & 0.0755 \\\\ \\hline\n",
+      "25 & 0.9999 & 0.9999 & 0.9999 & 0.9999 & 0.9960 & 0.3768 & 0.3254 & 0.3478 & 0.9034 & 0.0591 \\\\ \\hline\n",
+      "50 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3715 & 0.3253 & 0.3456 & 0.9021 & 0.0576 \\\\ \\hline\n",
+      "75 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3715 & 0.3253 & 0.3456 & 0.9021 & 0.0576 \\\\ \\hline\n",
+      "100 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 1.0000 & 0.3715 & 0.3253 & 0.3456 & 0.9021 & 0.0576 \\\\ \\hline\n",
+      "./data/DATA_WORD2VEC_HADM_TOP50\n",
+      "Train, Test: 39544 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.3523 & 0.1036 & 0.1192 & 0.9189 & 0.0777 & 0.3528 & 0.1043 & 0.1189 & 0.9184 & 0.0787 \\\\ \\hline\n",
+      "10 & 0.4653 & 0.1264 & 0.1568 & 0.9208 & 0.0859 & 0.4233 & 0.1223 & 0.1512 & 0.9199 & 0.0812 \\\\ \\hline\n",
+      "25 & 0.4688 & 0.1394 & 0.1744 & 0.9218 & 0.0892 & 0.4363 & 0.1356 & 0.1696 & 0.9207 & 0.0878 \\\\ \\hline\n",
+      "50 & 0.4644 & 0.1401 & 0.1758 & 0.9218 & 0.0899 & 0.4523 & 0.1362 & 0.1710 & 0.9207 & 0.0882 \\\\ \\hline\n",
+      "75 & 0.4869 & 0.1403 & 0.1762 & 0.9218 & 0.0900 & 0.4509 & 0.1364 & 0.1716 & 0.9208 & 0.0882 \\\\ \\hline\n",
+      "100 & 0.4891 & 0.1403 & 0.1763 & 0.9219 & 0.0903 & 0.4494 & 0.1365 & 0.1715 & 0.9208 & 0.0888 \\\\ \\hline\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_experiment(\"./data/DATA_TFIDFV0_HADM_TOP50\")\n",
+    "run_experiment(\"./data/DATA_TFIDFV1_HADM_TOP50\")\n",
+    "run_experiment(\"./data/DATA_WORD2VEC_HADM_TOP50\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/DATA_WORD2VEC_HADM_TOP50\n",
+      "Train, Test: 39544 13182\n",
+      "iter & train prec & recall & f1 & accuracy & em & test prec & recall & f1 & accuracy & em\n",
+      "5 & 0.1249 & 0.0697 & 0.0711 & 0.9179 & 0.0885 & 0.1242 & 0.0668 & 0.0682 & 0.9170 & 0.0847 \\\\ \\hline\n",
+      "10 & 0.9739 & 0.1291 & 0.1643 & 0.9264 & 0.1245 & 0.2735 & 0.0830 & 0.0943 & 0.9189 & 0.0869 \\\\ \\hline\n",
+      "20 & 0.9992 & 0.9059 & 0.9491 & 0.9931 & 0.8116 & 0.4377 & 0.0951 & 0.1153 & 0.9188 & 0.0832 \\\\ \\hline\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Name: org.apache.toree.interpreter.broker.BrokerException\n",
+       "Message: Traceback (most recent call last):\n",
+       "  File \"/tmp/kernel-PySpark-3ebf5a31-8d2c-4851-9fea-d6ea4d269838/pyspark_runner.py\", line 189, in <module>\n",
+       "    eval(compiled_code)\n",
+       "  File \"<string>\", line 1, in <module>\n",
+       "  File \"<string>\", line 16, in run_experiment2\n",
+       "  File \"<string>\", line 14, in evaluate\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/mllib/evaluation.py\", line 279, in accuracy\n",
+       "    return self.call(\"accuracy\")\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/mllib/common.py\", line 146, in call\n",
+       "    return callJavaFunc(self._sc, getattr(self._java_model, name), *a)\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/mllib/common.py\", line 123, in callJavaFunc\n",
+       "    return _java2py(sc, func(*args))\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/lib/py4j-0.10.4-src.zip/py4j/java_gateway.py\", line 1131, in __call__\n",
+       "    answer = self.gateway_client.send_command(command)\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/lib/py4j-0.10.4-src.zip/py4j/java_gateway.py\", line 883, in send_command\n",
+       "    response = connection.send_command(command)\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/lib/py4j-0.10.4-src.zip/py4j/java_gateway.py\", line 1028, in send_command\n",
+       "    answer = smart_decode(self.stream.readline()[:-1])\n",
+       "  File \"/home/docker-user/anaconda2/envs/cse6250/lib/python2.7/socket.py\", line 451, in readline\n",
+       "    data = self._sock.recv(self._rbufsize)\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/context.py\", line 236, in signal_handler\n",
+       "    raise KeyboardInterrupt()\n",
+       "KeyboardInterrupt\n",
+       "\n",
+       "StackTrace: org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "scala.Option.foreach(Option.scala:257)\n",
+       "org.apache.toree.interpreter.broker.BrokerState.markFailure(BrokerState.scala:162)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
+       "sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
+       "java.lang.reflect.Method.invoke(Method.java:498)\n",
+       "py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
+       "py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:357)\n",
+       "py4j.Gateway.invoke(Gateway.java:280)\n",
+       "py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
+       "py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
+       "py4j.GatewayConnection.run(GatewayConnection.java:214)\n",
+       "java.lang.Thread.run(Thread.java:745)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_experiment2(\"./data/DATA_WORD2VEC_HADM_TOP50\")\n",
+    "run_experiment2(\"./data/DATA_TFIDFV0_HADM_TOP50\")\n",
+    "run_experiment2(\"./data/DATA_TFIDFV1_HADM_TOP50\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
