--- a/code/pre-trained_wordvectors_to_keras.ipynb
+++ b/code/pre-trained_wordvectors_to_keras.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -76,8 +76,137 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 117458 unique tokens.\n"
+      "0     admission date discharge date date of birth s...\n",
+      "1    admission date discharge date date of birth se...\n",
+      "2    admission date discharge date service medicine...\n",
+      "3    admission date discharge date service medicine...\n",
+      "4    admission date discharge date service ccu hist...\n",
+      "Name: text, dtype: object\n"
      ]
+    }
+   ],
+   "source": [
+    "def preprocessor_word2vec(text):\n",
+    "    text = re.sub('\\[\\*\\*[^\\]]*\\*\\*\\]', '', text)\n",
+    "    text = re.sub('<[^>]*>', '', text)\n",
+    "    text = re.sub('[\\W]+', ' ', text.lower()) \n",
+    "    text = re.sub(\" \\d+\", \" \", text)\n",
+    "    \n",
+    "    return text\n",
+    "\n",
+    "texts = df_hadm_top10['text'].apply(preprocessor_word2vec)\n",
+    "\n",
+    "print texts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name: org.apache.toree.interpreter.broker.BrokerException\n",
+       "Message: Traceback (most recent call last):\n",
+       "  File \"/tmp/kernel-PySpark-535aabc0-437e-4d6d-b487-1d5bbb2e918d/pyspark_runner.py\", line 189, in <module>\n",
+       "    eval(compiled_code)\n",
+       "  File \"<string>\", line 5, in <module>\n",
+       "  File \"/home/docker-user/anaconda2/envs/cse6250/lib/python2.7/site-packages/pandas/core/series.py\", line 2294, in apply\n",
+       "    mapped = lib.map_infer(values, f, convert=convert_dtype)\n",
+       "  File \"pandas/src/inference.pyx\", line 1207, in pandas.lib.map_infer (pandas/lib.c:66124)\n",
+       "  File \"<string>\", line 3, in preprocessor_word2vec2\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/context.py\", line 236, in signal_handler\n",
+       "    raise KeyboardInterrupt()\n",
+       "KeyboardInterrupt\n",
+       "\n",
+       "StackTrace: org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "scala.Option.foreach(Option.scala:257)\n",
+       "org.apache.toree.interpreter.broker.BrokerState.markFailure(BrokerState.scala:162)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
+       "sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
+       "java.lang.reflect.Method.invoke(Method.java:498)\n",
+       "py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
+       "py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:357)\n",
+       "py4j.Gateway.invoke(Gateway.java:280)\n",
+       "py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
+       "py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
+       "py4j.GatewayConnection.run(GatewayConnection.java:214)\n",
+       "java.lang.Thread.run(Thread.java:745)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "STOPWORDS_WORD2VEC = stopwords.words('english') + ICD9CODES\n",
+    "\n",
+    "def preprocessor_word2vec2(text):\n",
+    "    text = \" \".join([i for i in text.split() if i not in STOPWORDS_WORD2VEC])\n",
+    "    \n",
+    "    return text\n",
+    "\n",
+    "texts = texts.apply(preprocessor_word2vec2)\n",
+    "\n",
+    "print texts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Name: org.apache.toree.interpreter.broker.BrokerException\n",
+       "Message: Traceback (most recent call last):\n",
+       "  File \"/tmp/kernel-PySpark-535aabc0-437e-4d6d-b487-1d5bbb2e918d/pyspark_runner.py\", line 189, in <module>\n",
+       "    eval(compiled_code)\n",
+       "  File \"<string>\", line 18, in <module>\n",
+       "  File \"/home/docker-user/cse6250-final-project/code/keras_text.py\", line 123, in fit_on_texts\n",
+       "    self.stopwords)\n",
+       "  File \"/home/docker-user/cse6250-final-project/code/keras_text.py\", line 41, in text_to_word_sequence\n",
+       "    return [i for i in seq if i not in stopwords]\n",
+       "  File \"/home/docker-user/cse6250-final-project/spark-2.1.0-bin-hadoop2.7/python/pyspark/context.py\", line 236, in signal_handler\n",
+       "    raise KeyboardInterrupt()\n",
+       "KeyboardInterrupt\n",
+       "\n",
+       "StackTrace: org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "scala.Option.foreach(Option.scala:257)\n",
+       "org.apache.toree.interpreter.broker.BrokerState.markFailure(BrokerState.scala:162)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
+       "sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
+       "java.lang.reflect.Method.invoke(Method.java:498)\n",
+       "py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
+       "py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:357)\n",
+       "py4j.Gateway.invoke(Gateway.java:280)\n",
+       "py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
+       "py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
+       "py4j.GatewayConnection.run(GatewayConnection.java:214)\n",
+       "java.lang.Thread.run(Thread.java:745)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -85,13 +214,19 @@
     "from keras.preprocessing.sequence import pad_sequences\n",
     "from nltk.corpus import stopwords\n",
     "\n",
+    "import time\n",
+    "t0 = time.time()\n",
+    "\n",
     "STOPWORDS_WORD2VEC = stopwords.words('english') + ICD9CODES\n",
+    "\n",
+    "max_sequence_len = 600\n",
     "\n",
     "def preprocessor_word2vec(text):\n",
     "    text = re.sub('\\[\\*\\*[^\\]]*\\*\\*\\]', '', text)\n",
     "    text = re.sub('<[^>]*>', '', text)\n",
     "    text = re.sub('[\\W]+', ' ', text.lower()) \n",
     "    text = re.sub(\" \\d+\", \" \", text)\n",
+    "    text = ' '.join([word for word in text.split() if word not in STOPWORDS_WORD2VEC])\n",
     "    \n",
     "    return text\n",
     "\n",
@@ -110,20 +245,53 @@
     "\n",
     "print('Found %s unique tokens.' % len(word_index))\n",
     "\n",
-    "data = pad_sequences(sequence)\n",
+    "data = pad_sequences(sequence, maxlen=max_sequence_len)\n",
     "\n",
     "#labels = to_categorical(np.asarray(labels))\n",
     "#print('Shape of data tensor:', data.shape)\n",
-    "#print('Shape of label tensor:', labels.shape)"
+    "#print('Shape of label tensor:', labels.shape)\n",
+    "print time.time() - t0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name: org.apache.toree.interpreter.broker.BrokerException\n",
+       "Message: Traceback (most recent call last):\n",
+       "  File \"/tmp/kernel-PySpark-dd26dd58-c3e3-4e0b-8fa8-8a9e24b14f84/pyspark_runner.py\", line 189, in <module>\n",
+       "    eval(compiled_code)\n",
+       "  File \"<string>\", line 10, in <module>\n",
+       "NameError: name 'df_hadm_top10' is not defined\n",
+       "\n",
+       "StackTrace: org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "org.apache.toree.interpreter.broker.BrokerState$$anonfun$markFailure$1.apply(BrokerState.scala:163)\n",
+       "scala.Option.foreach(Option.scala:257)\n",
+       "org.apache.toree.interpreter.broker.BrokerState.markFailure(BrokerState.scala:162)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
+       "sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
+       "sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
+       "java.lang.reflect.Method.invoke(Method.java:498)\n",
+       "py4j.reflection.MethodInvoker.invoke(MethodInvoker.java:244)\n",
+       "py4j.reflection.ReflectionEngine.invoke(ReflectionEngine.java:357)\n",
+       "py4j.Gateway.invoke(Gateway.java:280)\n",
+       "py4j.commands.AbstractCommand.invokeMethod(AbstractCommand.java:132)\n",
+       "py4j.commands.CallCommand.execute(CallCommand.java:79)\n",
+       "py4j.GatewayConnection.run(GatewayConnection.java:214)\n",
+       "java.lang.Thread.run(Thread.java:745)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -156,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
