--- a/code/preprocess_icd9code.ipynb
+++ b/code/preprocess_icd9code.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -229,14 +229,23 @@
    },
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
     "def sparse2vec(mapper, data):\n",
     "    out = [0] * len(mapper)\n",
     "    if data != None:\n",
     "        for i in data:\n",
     "            out[mapper[i]] = 1\n",
     "    return out\n",
-    "\n",
-    "def get_id_to_texticd9(id_type, topX):\n",
+    "    \n",
+    "def get_id_to_texticd9(id_type, topX, stopwords=[]):\n",
+    "    def remstopwords(text):\n",
+    "        text = re.sub('\\[\\*\\*[^\\]]*\\*\\*\\]', '', text)\n",
+    "        text = re.sub('<[^>]*>', '', text)\n",
+    "        text = re.sub('[\\W]+', ' ', text.lower()) \n",
+    "        text = re.sub(\" \\d+\", \" \", text)\n",
+    "        return \" \".join([i for i in text.split() if i not in stopwords])\n",
+    "    \n",
     "    id_to_topicd9, topicd9 = get_id_to_topicd9(id_type, topX)\n",
     "    mapper = dict(zip(topicd9, range(topX)))\n",
     "    \n",
@@ -249,7 +258,7 @@
     "        # involve all data, even those not related to top10\n",
     "        .leftOuterJoin(id_to_topicd9) \\\n",
     "        .map(lambda (id_, (text, icd9)): \\\n",
-    "             [id_]+sparse2vec(mapper, icd9)+[text])\n",
+    "             [id_]+sparse2vec(mapper, icd9)+[text if len(stopwords) == 0 else remstopwords(text)])\n",
     "#              list(Vectors.sparse(topX, dict.fromkeys(map(lambda x: mapper[x], icd9), 1))))\n",
     "        \n",
     "    return spark.createDataFrame(ne_topX, [\"id\"]+topicd9+[\"text\"]), mapper\n",
@@ -291,6 +300,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
+      "|    id|4019|2724|25000|4280|41401|53081|51881|42731|5849|5990|                text|\n",
+      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
+      "|117760|   0|   0|    0|   0|    0|    1|    1|    0|   0|   0|\"Admission Date: ...|\n",
+      "|129030|   1|   1|    0|   0|    0|    1|    0|    0|   0|   0|Admission Date:  ...|\n",
+      "|172040|   0|   0|    0|   0|    1|    0|    0|    0|   1|   0|Admission Date:  ...|\n",
+      "|156170|   0|   0|    1|   1|    0|    0|    0|    1|   1|   0|Admission Date:  ...|\n",
+      "|199180|   0|   0|    1|   1|    1|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
+      "|167440|   0|   0|    1|   0|    1|    0|    1|    0|   0|   0|\"Admission Date: ...|\n",
+      "|194580|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
+      "|178710|   0|   0|    0|   0|    0|    0|    0|    0|   1|   0|\"Admission Date: ...|\n",
+      "|162840|   0|   1|    0|   1|    0|    0|    0|    1|   0|   0|Admission Date:  ...|\n",
+      "|189980|   1|   0|    1|   1|    0|    0|    0|    0|   0|   0|Admission Date: [...|\n",
+      "|142370|   0|   0|    0|   1|    1|    0|    0|    0|   0|   0|\"Admission Date: ...|\n",
+      "|185380|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Unit No:  [**Nume...|\n",
+      "|169510|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
+      "|153640|   0|   0|    0|   0|    1|    0|    1|    0|   0|   0|Admission Date:  ...|\n",
+      "|196650|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Admission Date: [...|\n",
+      "|180780|   0|   0|    0|   0|    0|    0|    1|    0|   1|   0|\"Admission Date: ...|\n",
+      "|149040|   1|   0|    0|   0|    1|    0|    1|    0|   0|   0|\"Admission Date: ...|\n",
+      "|117300|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
+      "|196190|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
+      "|101430|   1|   1|    1|   0|    1|    0|    0|    0|   0|   0|Admission Date:  ...|\n",
+      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "42.7080309391\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "t0 = time.time()\n",
+    "\n",
+    "df_id2texticd9, topicd9_mapper = get_id_to_texticd9(\"hadm_id\", 10)\n",
+    "df_id2texticd9.show()\n",
+    "\n",
+    "print time.time() - t0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
+      "|    id|4019|2724|25000|4280|41401|53081|51881|42731|5849|5990|                text|\n",
+      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
+      "|117760|   0|   0|    0|   0|    0|    1|    1|    0|   0|   0|admission date di...|\n",
+      "|129030|   1|   1|    0|   0|    0|    1|    0|    0|   0|   0|admission date di...|\n",
+      "|172040|   0|   0|    0|   0|    1|    0|    0|    0|   1|   0|admission date di...|\n",
+      "|156170|   0|   0|    1|   1|    0|    0|    0|    1|   1|   0|admission date di...|\n",
+      "|199180|   0|   0|    1|   1|    1|    0|    0|    0|   0|   0|admission date di...|\n",
+      "|167440|   0|   0|    1|   0|    1|    0|    1|    0|   0|   0|admission date di...|\n",
+      "|194580|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|admission date di...|\n",
+      "|178710|   0|   0|    0|   0|    0|    0|    0|    0|   1|   0|admission date di...|\n",
+      "|162840|   0|   1|    0|   1|    0|    0|    0|    1|   0|   0|admission date di...|\n",
+      "|189980|   1|   0|    1|   1|    0|    0|    0|    0|   0|   0|admission date di...|\n",
+      "|142370|   0|   0|    0|   1|    1|    0|    0|    0|   0|   0|admission date di...|\n",
+      "|185380|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|unit admission da...|\n",
+      "|169510|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|admission date di...|\n",
+      "|153640|   0|   0|    0|   0|    1|    0|    1|    0|   0|   0|admission date di...|\n",
+      "|196650|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|admission date di...|\n",
+      "|180780|   0|   0|    0|   0|    0|    0|    1|    0|   1|   0|admission date di...|\n",
+      "|149040|   1|   0|    0|   0|    1|    0|    1|    0|   0|   0|admission date di...|\n",
+      "|117300|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|admission date di...|\n",
+      "|196190|   0|   0|    0|   0|    0|    0|    0|    0|   0|   0|admission date di...|\n",
+      "|101430|   1|   1|    1|   0|    1|    0|    0|    0|   0|   0|admission date di...|\n",
+      "+------+----+----+-----+----+-----+-----+-----+-----+----+----+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "72.5902099609\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "t0 = time.time()\n",
+    "STOPWORDS_WORD2VEC = stopwords.words('english') + ICD9CODES\n",
+    "\n",
+    "df_id2texticd9, topicd9_mapper = get_id_to_texticd9(\"hadm_id\", 10, stopwords=STOPWORDS_WORD2VEC)\n",
+    "df_id2texticd9.show()\n",
+    "\n",
+    "print time.time() - t0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "collapsed": false
@@ -308,6 +422,30 @@
    "source": [
     "df_id2texticd9, topicd9_mapper = get_id_to_texticd9(\"hadm_id\", 10)\n",
     "df_id2texticd9.write.csv(\"./data/DATA_HADM_TOP10\", header=True)\n",
+    "\n",
+    "print topicd9_mapper\n",
+    "print df_id2texticd9.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{u'2859': 24, u'41071': 1, u'32723': 2, u'311': 3, u'5119': 4, u'4240': 5, u'41401': 6, u'42789': 7, u'V1582': 16, u'53081': 9, u'496': 10, u'5070': 11, u'V053': 12, u'40391': 13, u'40390': 14, u'4280': 15, u'99592': 17, u'5845': 21, u'4168': 20, u'49390': 19, u'9971': 22, u'2724': 25, u'5849': 23, u'V4582': 0, u'V4581': 8, u'25000': 26, u'2875': 27, u'2720': 28, u'2851': 29, u'2762': 30, u'2761': 31, u'2449': 32, u'2767': 33, u'4019': 43, u'0389': 35, u'V5867': 36, u'5990': 37, u'2760': 38, u'V5861': 39, u'486': 40, u'4241': 18, u'3051': 42, u'5180': 34, u'V290': 41, u'7742': 44, u'412': 45, u'42731': 46, u'5859': 47, u'51881': 48, u'78552': 49}\n",
+      "52726\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_id2texticd9, topicd9_mapper = get_id_to_texticd9(\"hadm_id\", 50)\n",
+    "df_id2texticd9.write.csv(\"./data/DATA_HADM_TOP50\", header=True)\n",
     "\n",
     "print topicd9_mapper\n",
     "print df_id2texticd9.count()"
